# ChangeLog for x11-libs/libqxt
# Copyright 1999-2009 Berkano Overlay; distributed under the GPL version 2

  15 Aug 2009; Markos Chandras <hwoarang@gentoo.org> libqxt-9999.ebuild,
  -files/libqxt-9999-gcc4.4.patch:
  Remove gcc-4.4 patch since it was applied by upstream

  15 Aug 2009; Markos Chandras <hwoarang@gentoo.org> -libqxt-0.5.0.ebuild,
  -files/libqxt-0.5.0-gcc4.4.patch, libqxt-9999.ebuild,
  +files/libqxt-9999-gcc4.4.patch:
  Add missing gcc-4.4 patch. Add avahi dependency

  13 Jul 2009; Håvard Wall <haavardw@ifi.uio.no> +libqxt-0.5.0.ebuild,
  +files/libqxt-0.5.0-gcc4.4.patch:
  Compile with gcc-4.4 (bug 277591)

  30 Apr 2009; Ben de Groot <yngwin@gentoo.org> -libqxt-0.5.0.ebuild:
  Moving 0.5.0 ebuild to portage

  30 Apr 2009; Markos Chandras <hwoarang@gentoo.org> libqxt-9999.ebuild:
  Fixing live ebuild working directory

*libqxt-0.5.0 (30 Apr 2009)

  30 Apr 2009; Markos Chandras <hwoarang@gentoo.org> +libqxt-0.5.0.ebuild,
  libqxt-9999.ebuild:
  Bump to 0.5.0. Clean up dependencies, use mercurial for live ebuild

  08 Feb 2009; Markos Chandras <hwoarang@gentoo.org> libqxt-9999.ebuild:
  Dropped keywords

  10 May 2008; Ben de Groot <yngwin@gentoo.org>; libqxt-9999.ebuild:
  Adapting ebuild to split qt-4.4.

  02 Mar 2008; Ben de Groot <yngwin@gentoo.org>; libqxt-9999.ebuild:
  Improved ebuild a bit. Make qt4 ssl usecheck optional.

  02 Mar 2008; Ben de Groot <yngwin@gentoo.org>; +libqxt-9999.ebuild:
  Initial import. Ebuild based on the release version in portage.
