@@ -1,0 +1,12 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>qt</herd>
+<use>
+<flag name="sql">Enable SQL bindings</flag>
+<flag name="web">Enable fast cgi bindings</flag>
+</use>
+<longdescription lang="en">
+</longdescription>
+</pkgmetadata>
+
